# TASEP

./: .gitignore  CartPole.py  LICENSE  README.md  confirmed__DDS_s100.py  sim_results_cpp.csv  sim_results_py.csv  test.py
TASEP-Smarticles/: GridEnvironment.py  Memory.py  README.md  Trainer.py  custom_initial_state.py  example_playground.py  example_run_pretrained.py  example_training.py  hyperparam_optim.py  hyperparam_optim_analytics.py  plot_paper_comparison.py  plot_scientific.py  pyproject.toml  requirements.txt  run_for_video.py  sigma_vs_current_training.py  sigma_vs_current_training_parallel.py  test.py  training.py  update_models_new_param.py  yworks_uml.graphml  yworks_uml_simple.graphml
TASEP-Smarticles/data/different_speeds/: current_means.npy  current_means_fixed.npy  current_means_fixed_2.npy  current_means_fixed_tot.npy  current_means_onlysigma10.npy  sigmas_tot.npy
TASEP-Smarticles/data/equal_speeds/: currents.npy
TASEP-Smarticles/data/hyperparam_tune/: total.csv
TASEP-Smarticles/data/lanes_1/: currents.npy  timesteps.npy
TASEP-Smarticles/data/paper_comparison/: currents_gradient_1.04e-01.npy  currents_gradient_1.13e+00.npy  currents_gradient_1.22e+01.npy  currents_gradient_1.32e-01.npy  (+59 more)
TASEP-Smarticles/models/: all_models.json  example_model_20231006.pt  example_model_distinguishable_20231026120636.pt  example_model_distinguishable_20231026122155.pt  policy_net_trained_420000_steps_20231021141927.pt  policy_net_trained_520000_steps_episodes_20231022134918.pt
TASEP-Smarticles/vids/: PlaygroundRecording.mov  ffmpeg_command
(+1025 files in other folders)
